--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -12,7 +12,7 @@
             </div>
             <ul class="links">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
             <div class="search-bar">
