Updated travel recommendation site

--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
         <ul class="links">
             <li><a href="travel_recommendation.html">Home</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
