pushed update code

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -22,12 +22,18 @@
             </div>
         </nav>
         <!--home page-->
-        <div class="home">
-            <div class="home-content">
-                <h1>EXPLORE <br>DREAM <br>DESTINATION</h1>
-                <p>It encourages exploration of unfamiliar territories ,embracing diverse  culutures and landscapes,while pursuing the desired desination that captivates the heart and ignites a sense of wonder.</p>
-                <button class="book">BOOK NOW</button>
+        <div class="main-content-container">  
+            <div class="home">
+                <div class="home-content">
+                    <h1>EXPLORE <br>DREAM <br>DESTINATION</h1>
+                    <p>It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.</p>
+                    <button class="book">BOOK NOW</button>
+                </div>
+            </div>
+            <div class="search-results-container" style="display: none;">
+                <div id="searchResults"></div>
             </div>
         </div>
-    </body>
+        <script src="travel_recommendation.js"></script>
+    </body>
 </html>
