udpated travel-recommendation

--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -21,19 +21,19 @@
                 <button class="clear-btn">Clear</button>
             </div>
         </nav>
-        <!--home page-->
-        <div class="main-content-container">  
-            <div class="home">
-                <div class="home-content">
+        <!--home page--> 
+        <div class="home">
+            <div class="home-content">
+                <div class="home-text">
                     <h1>EXPLORE <br>DREAM <br>DESTINATION</h1>
                     <p>It encourages exploration of unfamiliar territories, embracing diverse cultures and landscapes, while pursuing the desired destination that captivates the heart and ignites a sense of wonder.</p>
                     <button class="book">BOOK NOW</button>
                 </div>
-            </div>
-            <div class="search-results-container" style="display: none;">
+                <div class="search-results-container" style="display: none;">
                 <div id="searchResults"></div>
+                </div>
             </div>
-        </div>
+
         <script src="travel_recommendation.js"></script>
     </body>
 </html>
