--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
             <span>GoBeyond</span>
         </div>
         <ul class="links">
-            <li><a href="travel_recommendation.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
