--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
             <span>GoBeyond</span>
         </div>
         <ul class="links">
-            <li><a href="travel_recommendation.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
         </ul>
